// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeProvider /> should render with a default theme 1`] = `
<ThemeProvider
  theme={
    Object {
      "button": Object {
        "background": "#FFFFFF",
        "backgroundActived": "#80a1c1",
        "backgroundHover": "#7593b0",
        "borderColor": "#80a1c1",
        "color": "#414141",
      },
      "card": Object {
        "titleColor": "#808080",
      },
      "colors": Object {
        "gray": "#414141",
        "grayDark": "#808080",
        "grayLight": "#E0E0E0",
        "primary": "#80a1c1",
        "primaryHover": "#7593b0",
        "white": "#FFFFFF",
      },
      "navbar": Object {
        "background": "#80a1c1",
        "titleColor": "#FFFFFF",
      },
    }
  }
/>
`;

exports[`<ThemeProvider /> should render with a theme prop 1`] = `
<ThemeProvider
  theme={
    Object {
      "button": Object {
        "background": "#FFFFFF",
        "backgroundActived": "#b5ca8d",
        "backgroundHover": "#a5b881",
        "borderColor": "#b5ca8d",
        "color": "#414141",
      },
      "card": Object {
        "titleColor": "#808080",
      },
      "colors": Object {
        "gray": "#414141",
        "grayDark": "#808080",
        "grayLight": "#E0E0E0",
        "primary": "#b5ca8d",
        "primaryHover": "#a5b881",
        "white": "#FFFFFF",
      },
      "navbar": Object {
        "background": "#b5ca8d",
        "titleColor": "#FFFFFF",
      },
    }
  }
/>
`;
